// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component renders correctly with no resource 1`] = `
<section
  id={null}
>
  test child
  <Connect(SecondaryNav) />
</section>
`;

exports[`Section component renders correctly with resource containing title and helptext 1`] = `
<section
  id={null}
>
  <h2
    className="ds-h2"
  >
    Program Summary
  </h2>
  <div
    className="ds-text--lead section--help-text"
  >
    Provide an introduction to the state program. Include context for this funding request by providing information such as current size, future vision, and how the program is positioned within the state. This information is similar to the content from the IAPD executive summary template section.
  </div>
  apd test child
  <Connect(SecondaryNav) />
</section>
`;

exports[`Section component renders correctly with resource containing title but no helptext 1`] = `
<section
  id={null}
>
  <h2
    className="ds-h2"
  >
    Objectives and Key Results
  </h2>
  goals test child
  <Connect(SecondaryNav) />
</section>
`;

exports[`Subsection component renders correctly 1`] = `
<Fragment>
  <h3
    className=" subsection--title ds-h3"
    id={null}
  >
    Objectives and Key Results
  </h3>
  <Instruction
    args={null}
    headingDisplay={
      Object {
        "className": "ds-h3",
        "level": "h3",
      }
    }
    reverse={false}
    source="activities.goals.instruction"
  />
  test child
</Fragment>
`;

exports[`Subsection component uses the passed-in heading class 1`] = `
<Fragment>
  <h3
    className="bobs-burgers subsection--title ds-h3"
    id={null}
  >
    Objectives and Key Results
  </h3>
  <Instruction
    args={null}
    headingDisplay={
      Object {
        "className": "ds-h3",
        "level": "h3",
      }
    }
    reverse={false}
    source="activities.goals.instruction"
  />
  test child
</Fragment>
`;
